internal class AnimationStrings
{
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string jump = "jump";
    internal static string attack = "attack";
    internal static string yVeclocity = "yVeclocity";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isOnWall = "isOnWall";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
}


